# lisa-os

./: CLAUDE.md  Cargo.toml  Kimi.md  README.md  justfile
.githooks/: pre-push
.github/workflows/: ci.yml  nightly.yml  release.yml
apps/notes/: app.lisaos.notes.json
branding/: README.md
cli/lisa/: Cargo.toml
daemons/agentd/: README.md
daemons/contextd/: Cargo.toml  README.md
daemons/contextd/src/: index.rs  lib.rs  memory.rs  store.rs
daemons/inferenced/: Cargo.toml  README.md
daemons/modeld/: Cargo.toml
daemons/remoted/: Cargo.toml  README.md
docs/: PACKAGES.md  PLAN.md  RELEASE_PLAN.md  ROADMAP.md  STATUS.md
docs/adr/: 0004-flutter-lane-forge.md  0005-gpl2-license.md  0008-portal-standalone-service.md  0009-agent-bus-core.md  0010-remote-providers.md  0012-gnome-control-center-lisa-panel.md  0013-harness-intents-and-coding-agent.md  0015-assistant-app.md  0016-reverse-dns-naming.md  0017-plymouth-in-initrd.md  0018-var-pinned-partuuid.md  README.md
docs/notes/: cognee-evaluation.md
ime/fcitx5-lisa/: CMakeLists.txt
libs/forge-harness/: Cargo.toml
libs/forge-harness/src/: jail.rs  lib.rs
libs/harness-core/: Cargo.toml
libs/liblisa/: Cargo.toml
libs/lisa_flutter/: .metadata  pubspec.yaml
libs/lisa_ui/: pubspec.yaml
libs/mcp-bus/: Cargo.toml  README.md
models/catalog/: catalog.toml
models/evals/: README.md  addressed_intent_eval.py
os/mkosi/: README.md  mkosi.conf  mkosi.postinst.chroot
os/repo-tools/: README.md  snapshot.sh  snapshot.txt
portals/xdg-desktop-portal-lisa/: README.md
shell/assistant/: README.md  (+2 more)
(+118 files in other folders)
