[package]
name = "lisa-contextd"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
blake3 = "1.8.5"
lisa-ledger = { version = "0.1.0", path = "../../libs/lisa-ledger" }
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
thiserror = "2.0.19"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.27.0"
