[package]
name = "forge-harness"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
thiserror = "2.0.19"
ureq = { version = "3.3.0", features = ["json"] }

[dev-dependencies]
tempfile = "3.27.0"
